# 3DMMS

./: .gitignore  3DMMS.cpp  3DMMS.h  ApplyGeometricConstraints.m  CMakeLists.txt  FormatForSBA.m  MATLAB_Triangulation_test.m  PrepareSbaForRendering.m  QuadrupedDynamics.cpp  QuadrupedDynamics.h  README.md  UI.cpp  UI.h  eucsbademo.c  pch.cpp  pch.h
Cube/: Camera Localization.blend  Camera Localization.blend1  Camera View Port.blend  Camera View Port.blend1  Camera View Port.mtl  Cube.blend  Nuetral_Pose_SIX.mtl  Nuetral_Pose_one.blend  Nuetral_Pose_one.blend1
SBA/sba-1.6/: CMakeLists.txt  CMakeSettings.json  sba.lib
SBA/sba-1.6/demo/: 2cams.txt  2camsvarK.txt  2pts.txt  eucsbademo.c
